--- a/bh1750-daemon.8
+++ b/bh1750-daemon.8
@@ -52,10 +52,24 @@ database file which stores the commands to execute for ambient light
 levels. Default:
 .Pa /var/db/bh1750/actions.sqlite
 .Sh DESCRIPTION
+The daemon works with a kernel driver
+.Xr bh1750 4
+and
+.Xr sqlite 1
+database which may be created and managed with
+.Xr bh1750-control 1
+utility. It reads the
+.Xr sysctl 8
+tree for the ambient light sensor value every 5 seconds, selects commands
+to run for reached light levels from the database and run them, doing some
+caching job along the way. The reached level should be understood as the
+maximum value from a scope of levels set in the database but less than the
+value received from the sensor.
 .Sh SEE ALSO
+.Xr bh1750 4 ,
 .Xr bh1750-control 1 ,
 .Xr sysctl 8 ,
-.Xr sqlite3 8
+.Xr sqlite3 1
 .Sh AUTHORS
 The
 .Nm
