Added delays for the actions (no parameter added for bh1750-control yet)

--- a/bh1750-daemon.8
+++ b/bh1750-daemon.8
@@ -63,8 +63,8 @@ utility. It reads the
 tree for the ambient light sensor value every 5 seconds, selects commands
 to run for reached light levels from the database and run them, doing some
 caching job along the way. The reached level should be understood as the
-maximum value from a scope of levels set in the database but less than the
-value received from the sensor.
+maximum level from ones set in the database for one the same scope but less
+than the value received from the sensor.
 .Sh SEE ALSO
 .Xr bh1750 4 ,
 .Xr bh1750-control 1 ,
