--- a/bh1750-daemon.8
+++ b/bh1750-daemon.8
@@ -29,10 +29,7 @@
 .Nm bh1750-daemon
 .Nd Ambient light control daemon for bh1750 kernel driver
 .Sh SYNOPSIS
-.Nm
-.Op Fl b
-.Op Fl i Ar number
-.Op Fl f Ar dbfile
+.Nm Op Fl b Op Fl i Ar number Op Fl f Ar dbfile
 .Sh OPTIONS
 The following options are supported by
 .Nm :
